# http-cache

./: Cargo.toml
http-cache/: CHANGELOG.md  Cargo.toml
http-cache-mokadeser/: Cargo.toml
http-cache-mokadeser/benches/: benchmarks.rs
http-cache-quickcache/CHANGELOG/: index.html
http-cache-quickcache/README/: index.html
http-cache-reqwest/: CHANGELOG.md  Cargo.toml
http-cache-reqwest/CHANGELOG/: index.html
http-cache-reqwest/src/: lib.rs
http-cache-surf/: CHANGELOG.md  Cargo.toml
http-cache-surf/CHANGELOG/: index.html
http-cache-surf/src/: lib.rs
http-cache-tests/: Cargo.toml
http-cache-tests/src/: client_hyper.rs  lib.rs
http-cache-tower/: Cargo.toml
http-cache-tower/src/: lib.rs
http-cache/CHANGELOG/: index.html
http-cache/benches/: benchmarks.rs
http-cache/src/: error.rs  lib.rs
http-cache/src/managers/: cacache.rs  moka.rs
