[package]
name = "http-cache-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
async-std = { version = "1.12.0", features = ["attributes"] }
cacache = "10.0.1"
http = "0.2.8"
http-cache-semantics = "1.0.1"
http-types = "2.12.0"
reqwest = "0.11.11"
reqwest-middleware = "0.1.6"
surf = "2.3.2"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
wiremock = "0.5.14"
tower = "0.4.13"
hyper = { version = "0.14.20", features = ["client"] }

[dependencies.http-cache]
path = "../http-cache"
version = "0.8.0"
features = ["with-http-types", "manager-moka"]

[dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"
version = "0.6.0"

[dependencies.http-cache-surf]
path = "../http-cache-surf"
version = "0.6.0"

[dependencies.http-cache-tower]
path = "../http-cache-tower"
version = "0.1.0"
